<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_movie"
        android:title="@string/title_movie"/>

    <item
        android:id="@+id/navigation_now_playing"
        android:icon="@drawable/ic_movie_playing"
        android:title="@string/title_now_playing"/>

    <item
        android:id="@+id/navigation_movie_top_rated"
        android:icon="@drawable/ic_star"
        android:title="@string/title_movie_top_rated"
        />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favourite" />

</menu>